Init project ci

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,4 @@
 sonar.projectKey=bmatias-ynov-frontend
+sonar.coverage.exclusions= frontend/jest.config.cjs, frontend/src/main.tsx, frontend/coverage/** , frontend/src/App.tsx, frontend/src/components/**
+sonar.cpd.exclusions=frontend/coverage/**, backend/bin/**
+sonar.exclusions=**/coverage/**
