--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Generate coverage report (Frontend)
+        run: npx nyc --reporter=text-lcov npm test > coverage.lcov
+        working-directory: ./frontend
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
@@ -25,6 +28,11 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
+        with:
+          args: >
+            -Dsonar.javascript.lcov.reportPaths=frontend/angular-17-crud-exemple/coverage/lcov.info
+
       # If you wish to fail your job when the Quality Gate is red, uncomment the
       # following lines. This would typically be used to fail a deployment.
       # - uses: sonarsource/sonarqube-quality-gate-action@master
