--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,24 +12,26 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "18.13"
+          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli
+
       - name: Install dependencies
         run: npm install
-      - name: Run tests with coverage
-        run: npm run test
-      - uses: sonarsource/sonarqube-scan-action@master
+
+      - name: Run tests and coverage headless
+        run: npm run test:ci
+        continue-on-error: true
+
+      - name: SonarQube analysis
+        uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-
         with:
           args: >
-            -Dsonar.javascript.lcov.reportPaths=frontend/angular-17-crud-exemple/coverage/lcov.info
-
+            -Dsonar.javascript.lcov.reportPaths=/coverage/angular-17-crud/lcov.info
       # If you wish to fail your job when the Quality Gate is red, uncomment the
       # following lines. This would typically be used to fail a deployment.
       # - uses: sonarsource/sonarqube-quality-gate-action@master
