--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadless --code-coverage"
+    "test": "ng test --no-watch --no-progress --browsers=ChromeHeadless --code-coverage"
   },
   "private": true,
   "dependencies": {
